test/kube2e/assets/caching/resources/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: service1
  name: service1
  namespace: gloo-system
spec:
  containers:
  - image: gcr.io/solo-test-236622/cache_test_service:0.0.1
    name: service1
    ports:
    - name: http
      containerPort: 8000
    readinessProbe:
      httpGet:
        port: 8000
        path: /service/1/no-cache
