test/kube2e/assets/caching/resources/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: "gloo-system"
spec:
  ports:
    - port: 8000
      name: http
      targetPort: http
  selector:
    app: service1
